fix package keywords

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 description = "A camera controller for editors and CAD."
 license = "MIT OR Apache-2.0"
-keywords = ["controller, camera, bevy, CAD"]
+keywords = ["controller", "camera", "bevy", "CAD"]
 repository = "https://github.com/aevyrie/bevy_editor_cam"
 documentation = "https://docs.rs/crate/bevy_editor_cam/latest"
 exclude = ["assets/"]
