--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "bevy_editor_cam"
-version = "0.1.0"
+version = "0.2.0"
 edition = "2021"
 description = "A camera controller for editors and CAD."
 license = "MIT OR Apache-2.0"
@@ -9,19 +9,45 @@ repository = "https://github.com/aevyrie/bevy_editor_cam"
 documentation = "https://docs.rs/crate/bevy_editor_cam/latest"
 exclude = ["assets/"]
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[features]
+default = ["extension_anchor_indicator", "extension_independent_skybox"]
+extension_anchor_indicator = ["bevy_gizmos"]
+extension_independent_skybox = ["bevy_asset", "bevy_core_pipeline"]
 
 [dependencies]
-bevy = { version = "0.13", default-features = false, features = [
-    "bevy_render",
-    "bevy_gizmos",
-    "bevy_asset",
-    "bevy_core_pipeline",
-] }
+bevy_app = "0.13"
+bevy_derive = "0.13"
+bevy_ecs = "0.13"
+bevy_input = "0.13"
+bevy_log = "0.13"
+bevy_math = "0.13"
+bevy_reflect = "0.13"
+bevy_render = "0.13"
+bevy_time = "0.13"
+bevy_transform = "0.13"
+bevy_utils = "0.13"
+bevy_window = "0.13"
+# Optional
+bevy_asset = { version = "0.13", optional = true }
+bevy_core_pipeline = { version = "0.13", optional = true }
+bevy_gizmos = { version = "0.13", optional = true }
+# 3rd party
 bevy_picking_core = "0.18"
 
 [dev-dependencies]
-bevy = { version = "0.13", features = ["jpeg"] }
+bevy = { version = "0.13", default-features = false, features = [
+    "bevy_gizmos",
+    "bevy_gltf",
+    "bevy_scene",
+    "bevy_text",
+    "bevy_ui",
+    "bevy_winit",
+    "jpeg",
+    "ktx2",
+    "tonemapping_luts",
+    "x11",
+    "zstd",
+] }
 bevy_mod_picking = { version = "0.18", default-features = false, features = [
     "backend_raycast",
 ] }
