--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -39,7 +39,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: dtolnay/rust-toolchain@stable
       - uses: Swatinem/rust-cache@v2.7.0
-      - run: cargo check --workspace --no-default-features --all-targets
+      - run: cargo check --workspace --no-default-features
 
   clippy:
     runs-on: ubuntu-latest
