--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ extension_anchor_indicator = ["bevy_gizmos"]
 extension_independent_skybox = ["bevy_asset", "bevy_core_pipeline"]
 
 [dependencies]
-bevy_app = "0.13"
+bevy_app = "=0.13"
 bevy_derive = "0.13"
 bevy_ecs = "0.13"
 bevy_input = "0.13"
@@ -35,7 +35,7 @@ bevy_gizmos = { version = "0.13", optional = true }
 bevy_picking_core = "0.18"
 
 [dev-dependencies]
-bevy = { version = "0.13", default-features = false, features = [
+bevy = { version = "0.13", features = [
     "bevy_gizmos",
     "bevy_gltf",
     "bevy_scene",
@@ -52,5 +52,5 @@ bevy_mod_picking = { version = "0.18", default-features = false, features = [
     "backend_raycast",
 ] }
 
-big_space = "0.5"
+big_space = "0.6"
 rand = "0.8"
