--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,7 +35,7 @@ bevy_gizmos = { version = "0.13", optional = true }
 bevy_picking_core = "0.18"
 
 [dev-dependencies]
-bevy = { version = "0.13", features = [
+bevy = { version = "0.13", default-features = false, features = [
     "bevy_gizmos",
     "bevy_gltf",
     "bevy_scene",
