--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,6 +43,7 @@ bevy = { version = "0.13", default-features = false, features = [
     "bevy_ui",
     "bevy_winit",
     "default_font",
+    "multi-threaded",
     "jpeg",
     "ktx2",
     "tonemapping_luts",
