--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,28 +15,28 @@ extension_anchor_indicator = ["bevy_gizmos"]
 extension_independent_skybox = ["bevy_asset", "bevy_core_pipeline"]
 
 [dependencies]
-bevy_app = "0.14.0"
-bevy_color = "0.14.0"
-bevy_derive = "0.14.0"
-bevy_ecs = "0.14.0"
-bevy_input = "0.14.0"
-bevy_log = "0.14.0"
-bevy_math = "0.14.0"
-bevy_reflect = "0.14.0"
-bevy_render = "0.14.0"
-bevy_time = "0.14.0"
-bevy_transform = "0.14.0"
-bevy_utils = "0.14.0"
-bevy_window = "0.14.0"
+bevy_app = "0.14"
+bevy_color = "0.14"
+bevy_derive = "0.14"
+bevy_ecs = "0.14"
+bevy_input = "0.14"
+bevy_log = "0.14"
+bevy_math = "0.14"
+bevy_reflect = "0.14"
+bevy_render = "0.14"
+bevy_time = "0.14"
+bevy_transform = "0.14"
+bevy_utils = "0.14"
+bevy_window = "0.14"
 # Optional
-bevy_asset = { version = "0.14.0", optional = true }
-bevy_core_pipeline = { version = "0.14.0", optional = true }
-bevy_gizmos = { version = "0.14.0", optional = true }
+bevy_asset = { version = "0.14", optional = true }
+bevy_core_pipeline = { version = "0.14", optional = true }
+bevy_gizmos = { version = "0.14", optional = true }
 # 3rd party
 bevy_picking_core = "0.20.0"
 
 [dev-dependencies]
-bevy = { version = "0.14.0", default-features = false, features = [
+bevy = { git = "https://github.com/bevyengine/bevy.git", rev = "9386bd0", default-features = false, features = [
     "bevy_gizmos",
     "bevy_gltf",
     "bevy_scene",
@@ -54,6 +54,29 @@ bevy = { version = "0.14.0", default-features = false, features = [
 bevy_mod_picking = { version = "0.20.0", default-features = false, features = [
     "backend_raycast",
 ] }
-
-big_space = "0.7.0"
+# big_space = "0.7.0"
 rand = "0.8"
+
+[patch.crates-io]
+bevy_app = { git = "https://github.com/bevyengine/bevy.git", rev = "9386bd0" }
+bevy_color = { git = "https://github.com/bevyengine/bevy.git", rev = "9386bd0" }
+bevy_derive = { git = "https://github.com/bevyengine/bevy.git", rev = "9386bd0" }
+bevy_ecs = { git = "https://github.com/bevyengine/bevy.git", rev = "9386bd0" }
+bevy_input = { git = "https://github.com/bevyengine/bevy.git", rev = "9386bd0" }
+bevy_log = { git = "https://github.com/bevyengine/bevy.git", rev = "9386bd0" }
+bevy_math = { git = "https://github.com/bevyengine/bevy.git", rev = "9386bd0" }
+bevy_reflect = { git = "https://github.com/bevyengine/bevy.git", rev = "9386bd0" }
+bevy_render = { git = "https://github.com/bevyengine/bevy.git", rev = "9386bd0" }
+bevy_time = { git = "https://github.com/bevyengine/bevy.git", rev = "9386bd0" }
+bevy_transform = { git = "https://github.com/bevyengine/bevy.git", rev = "9386bd0" }
+bevy_utils = { git = "https://github.com/bevyengine/bevy.git", rev = "9386bd0" }
+bevy_window = { git = "https://github.com/bevyengine/bevy.git", rev = "9386bd0" }
+# Optional
+bevy_asset = { git = "https://github.com/bevyengine/bevy.git", rev = "9386bd0" }
+bevy_core_pipeline = { git = "https://github.com/bevyengine/bevy.git", rev = "9386bd0" }
+bevy_gizmos = { git = "https://github.com/bevyengine/bevy.git", rev = "9386bd0" }
+# Dev
+bevy = { git = "https://github.com/bevyengine/bevy.git", rev = "9386bd0" }
+# Upstream update needed
+bevy_picking_core = { path = "../bevy_mod_picking" }
+bevy_mod_picking = { path = "../bevy_mod_picking" }
