--- a/Cargo.toml
+++ b/Cargo.toml
@@ -58,28 +58,29 @@ bevy_mod_picking = { version = "0.20.0", default-features = false, features = [
 rand = "0.8"
 
 [patch.crates-io]
-bevy_app = { path = "../bevy/crates/bevy_app" }
-bevy_color = { path = "../bevy/crates/bevy_color" }
-bevy_derive = { path = "../bevy/crates/bevy_derive" }
-bevy_ecs = { path = "../bevy/crates/bevy_ecs" }
-bevy_input = { path = "../bevy/crates/bevy_input" }
-bevy_log = { path = "../bevy/crates/bevy_log" }
-bevy_math = { path = "../bevy/crates/bevy_math" }
-bevy_reflect = { path = "../bevy/crates/bevy_reflect" }
-bevy_render = { path = "../bevy/crates/bevy_render" }
-bevy_time = { path = "../bevy/crates/bevy_time" }
-bevy_transform = { path = "../bevy/crates/bevy_transform" }
-bevy_utils = { path = "../bevy/crates/bevy_utils" }
-bevy_window = { path = "../bevy/crates/bevy_window" }
+bevy_app = { git = "https://github.com/bevyengine/bevy.git", rev = "9386bd0114c44c9f00a2e9c41db1225aaa78d159" }
+bevy_color = { git = "https://github.com/bevyengine/bevy.git", rev = "9386bd0114c44c9f00a2e9c41db1225aaa78d159" }
+bevy_derive = { git = "https://github.com/bevyengine/bevy.git", rev = "9386bd0114c44c9f00a2e9c41db1225aaa78d159" }
+bevy_ecs = { git = "https://github.com/bevyengine/bevy.git", rev = "9386bd0114c44c9f00a2e9c41db1225aaa78d159" }
+bevy_input = { git = "https://github.com/bevyengine/bevy.git", rev = "9386bd0114c44c9f00a2e9c41db1225aaa78d159" }
+bevy_log = { git = "https://github.com/bevyengine/bevy.git", rev = "9386bd0114c44c9f00a2e9c41db1225aaa78d159" }
+bevy_math = { git = "https://github.com/bevyengine/bevy.git", rev = "9386bd0114c44c9f00a2e9c41db1225aaa78d159" }
+bevy_reflect = { git = "https://github.com/bevyengine/bevy.git", rev = "9386bd0114c44c9f00a2e9c41db1225aaa78d159" }
+bevy_render = { git = "https://github.com/bevyengine/bevy.git", rev = "9386bd0114c44c9f00a2e9c41db1225aaa78d159" }
+bevy_time = { git = "https://github.com/bevyengine/bevy.git", rev = "9386bd0114c44c9f00a2e9c41db1225aaa78d159" }
+bevy_transform = { git = "https://github.com/bevyengine/bevy.git", rev = "9386bd0114c44c9f00a2e9c41db1225aaa78d159" }
+bevy_utils = { git = "https://github.com/bevyengine/bevy.git", rev = "9386bd0114c44c9f00a2e9c41db1225aaa78d159" }
+bevy_window = { git = "https://github.com/bevyengine/bevy.git", rev = "9386bd0114c44c9f00a2e9c41db1225aaa78d159" }
 # Optional
-bevy_asset = { path = "../bevy/crates/bevy_asset" }
-bevy_core_pipeline = { path = "../bevy/crates/bevy_core_pipeline" }
-bevy_gizmos = { path = "../bevy/crates/bevy_gizmos" }
+bevy_asset = { git = "https://github.com/bevyengine/bevy.git", rev = "9386bd0114c44c9f00a2e9c41db1225aaa78d159" }
+bevy_core_pipeline = { git = "https://github.com/bevyengine/bevy.git", rev = "9386bd0114c44c9f00a2e9c41db1225aaa78d159" }
+bevy_gizmos = { git = "https://github.com/bevyengine/bevy.git", rev = "9386bd0114c44c9f00a2e9c41db1225aaa78d159" }
 # Dev
-bevy = { path = "../bevy" }
+bevy = { git = "https://github.com/bevyengine/bevy.git", rev = "9386bd0114c44c9f00a2e9c41db1225aaa78d159" }
 # Upstream update needed
-bevy_picking_core = { path = "../bevy_mod_picking/crates/bevy_picking_core" }
-bevy_mod_picking = { path = "../bevy_mod_picking" }
+bevy_picking_core = { git = "https://github.com/vrixyz/bevy_mod_picking.git", branch = "bevy_main" }
+bevy_mod_picking = { git = "https://github.com/vrixyz/bevy_mod_picking.git", branch = "bevy_main" }
 # transitive dependencies
-bevy_hierarchy = { path = "../bevy/crates/bevy_hierarchy" }
-bevy_core = { path = "../bevy/crates/bevy_core" }
+bevy_hierarchy = { git = "https://github.com/bevyengine/bevy.git", rev = "9386bd0114c44c9f00a2e9c41db1225aaa78d159" }
+bevy_core = { git = "https://github.com/bevyengine/bevy.git", rev = "9386bd0114c44c9f00a2e9c41db1225aaa78d159" }
+bevy_eventlistener = { git = "https://github.com/vrixyz/bevy_eventlistener.git", branch = "bevy_main" }
