--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,7 +36,13 @@ bevy_core_pipeline = { version = "0.15.0", optional = true }
 bevy_gizmos = { version = "0.15.0", optional = true }
 
 [dev-dependencies]
-bevy = { version = "0.15.0", default-features = false, features = [
+big_space = "0.7.0"
+indoc = "2.0.5"
+rand = "0.8"
+
+[dev-dependencies.bevy]
+version = "0.15.0"
+features = [
     "bevy_gizmos",
     "bevy_gltf",
     "bevy_scene",
@@ -50,10 +56,6 @@ bevy = { version = "0.15.0", default-features = false, features = [
     "tonemapping_luts",
     "x11",
     "zstd",
-] }
-bevy_mod_picking = { version = "0.20.0", default-features = false, features = [
-    "backend_raycast",
-] }
-
-big_space = "0.7.0"
-rand = "0.8"
+]
+# TODO: workaround for https://github.com/bevyengine/bevy/issues/16562
+default-features = true
