--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,28 +15,28 @@ extension_anchor_indicator = ["bevy_gizmos"]
 extension_independent_skybox = ["bevy_asset", "bevy_core_pipeline"]
 
 [dependencies]
-bevy_app = "0.14.0"
-bevy_color = "0.14.0"
-bevy_derive = "0.14.0"
-bevy_ecs = "0.14.0"
-bevy_input = "0.14.0"
-bevy_log = "0.14.0"
-bevy_math = "0.14.0"
-bevy_reflect = "0.14.0"
-bevy_render = "0.14.0"
-bevy_time = "0.14.0"
-bevy_transform = "0.14.0"
-bevy_utils = "0.14.0"
-bevy_window = "0.14.0"
+bevy_app = "0.15.0"
+bevy_color = "0.15.0"
+bevy_derive = "0.15.0"
+bevy_ecs = "0.15.0"
+bevy_image = "0.15.0"
+bevy_input = "0.15.0"
+bevy_log = "0.15.0"
+bevy_math = "0.15.0"
+bevy_picking = "0.15.0"
+bevy_reflect = "0.15.0"
+bevy_render = "0.15.0"
+bevy_time = "0.15.0"
+bevy_transform = "0.15.0"
+bevy_utils = "0.15.0"
+bevy_window = "0.15.0"
 # Optional
-bevy_asset = { version = "0.14.0", optional = true }
-bevy_core_pipeline = { version = "0.14.0", optional = true }
-bevy_gizmos = { version = "0.14.0", optional = true }
-# 3rd party
-bevy_picking_core = "0.20.0"
+bevy_asset = { version = "0.15.0", optional = true }
+bevy_core_pipeline = { version = "0.15.0", optional = true }
+bevy_gizmos = { version = "0.15.0", optional = true }
 
 [dev-dependencies]
-bevy = { version = "0.14.0", default-features = false, features = [
+bevy = { version = "0.15.0", default-features = false, features = [
     "bevy_gizmos",
     "bevy_gltf",
     "bevy_scene",
