--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,6 +36,7 @@ bevy_core_pipeline = { version = "0.15.0", optional = true }
 bevy_gizmos = { version = "0.15.0", optional = true }
 
 [dev-dependencies]
+bevy_framepace = "0.18"
 big_space = "0.8.0"
 indoc = "2.0.5"
 rand = "0.8"
