--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,36 +15,35 @@ extension_anchor_indicator = ["bevy_gizmos"]
 extension_independent_skybox = ["bevy_asset", "bevy_core_pipeline"]
 
 [dependencies]
-bevy_app = "0.16.0-rc.5"
-bevy_color = "0.16.0-rc.5"
-bevy_derive = "0.16.0-rc.5"
-bevy_ecs = "0.16.0-rc.5"
-bevy_image = "0.16.0-rc.5"
-bevy_input = "0.16.0-rc.5"
-bevy_log = "0.16.0-rc.5"
-bevy_math = "0.16.0-rc.5"
-bevy_picking = "0.16.0-rc.5"
-bevy_reflect = "0.16.0-rc.5"
-bevy_render = "0.16.0-rc.5"
-bevy_time = "0.16.0-rc.5"
-bevy_transform = "0.16.0-rc.5"
-bevy_utils = "0.16.0-rc.5"
-bevy_window = "0.16.0-rc.5"
-bevy_platform = "0.16.0-rc.5"
+bevy_app = "0.16.0"
+bevy_color = "0.16.0"
+bevy_derive = "0.16.0"
+bevy_ecs = "0.16.0"
+bevy_image = "0.16.0"
+bevy_input = "0.16.0"
+bevy_log = "0.16.0"
+bevy_math = "0.16.0"
+bevy_picking = "0.16.0"
+bevy_reflect = "0.16.0"
+bevy_render = "0.16.0"
+bevy_time = "0.16.0"
+bevy_transform = "0.16.0"
+bevy_utils = "0.16.0"
+bevy_window = "0.16.0"
+bevy_platform = "0.16.0"
 # Optional
-bevy_asset = { version = "0.16.0-rc.5", optional = true }
-bevy_core_pipeline = { version = "0.16.0-rc.5", optional = true }
-bevy_gizmos = { version = "0.16.0-rc.5", optional = true }
+bevy_asset = { version = "0.16.0", optional = true }
+bevy_core_pipeline = { version = "0.16.0", optional = true }
+bevy_gizmos = { version = "0.16.0", optional = true }
 
 [dev-dependencies]
-#TODO(amy): uncomment when those are migrated
-#bevy_framepace = "0.18"
-#big_space = "0.8.0"
+bevy_framepace = "0.19.1"
+#big_space = {git="https://github.com/aevyrie/big_space"}
 indoc = "2.0.5"
 rand = "0.8"
 
 [dev-dependencies.bevy]
-version = "0.16.0-rc.5"
+version = "0.16.0"
 features = [
     "bevy_gizmos",
     "bevy_gltf",
