--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -5,8 +5,16 @@ on:
     branches:
       - main
 jobs:
+  setup:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Update Packages
+        run: sudo apt-get update -yq
+      - name: Install dependencies
+        run: sudo apt-get install -yq --no-install-recommends libudev-dev libasound2-dev libxcb-composite0-dev
   format:
     runs-on: ubuntu-latest
+    needs: [setup]
     steps:
       - uses: actions/checkout@v3
       - uses: dtolnay/rust-toolchain@stable
@@ -16,57 +24,57 @@ jobs:
 
   check:
     runs-on: ubuntu-latest
+    needs: [setup]
     steps:
       - uses: actions/checkout@v3
       - uses: dtolnay/rust-toolchain@stable
       - uses: Swatinem/rust-cache@v2.7.0
-      - run: sudo apt-get install -yq --no-install-recommends libudev-dev libasound2-dev libxcb-composite0-dev
-      - run: cargo check --workspace --all-features --all-targets
+      - run: cargo check --all-features --all-targets
 
   check-no-defaults:
     runs-on: ubuntu-latest
+    needs: [setup]
     steps:
       - uses: actions/checkout@v3
       - uses: dtolnay/rust-toolchain@stable
       - uses: Swatinem/rust-cache@v2.7.0
-      - run: sudo apt-get install -yq --no-install-recommends libudev-dev libasound2-dev libxcb-composite0-dev
-      - run: cargo check --workspace --no-default-features
+      - run: cargo check --no-default-features --all-targets --features=libm
 
   clippy:
     runs-on: ubuntu-latest
+    needs: [setup]
     steps:
       - uses: actions/checkout@v3
       - uses: dtolnay/rust-toolchain@stable
       - uses: Swatinem/rust-cache@v2.7.0
       - run: rustup component add clippy
-      - run: sudo apt-get install -yq --no-install-recommends libudev-dev libasound2-dev libxcb-composite0-dev
-      - run: cargo clippy --workspace --all-features --all-targets -- -D warnings
+      - run: cargo clippy --all-features --all-targets -- -D warnings
 
   doc:
     runs-on: ubuntu-latest
+    needs: [setup]
     steps:
       - uses: actions/checkout@v3
       - uses: dtolnay/rust-toolchain@stable
       - uses: Swatinem/rust-cache@v2.7.0
-      - run: sudo apt-get install -yq --no-install-recommends libudev-dev libasound2-dev libxcb-composite0-dev
-      - run: cargo doc --no-deps --workspace --all-features
+      - run: cargo doc --all-features --no-deps
         env:
           RUSTDOCFLAGS: -D warnings
     
   test:
     runs-on: ubuntu-latest
+    needs: [setup]
     steps:
       - uses: actions/checkout@v3
       - uses: dtolnay/rust-toolchain@stable
       - uses: Swatinem/rust-cache@v2.7.0
-      - run: sudo apt-get install -yq --no-install-recommends libudev-dev libasound2-dev libxcb-composite0-dev
-      - run: cargo test --workspace --all-targets --all-features
+      - run: cargo test --all-features
 
-  test-doc:
+  doctest:
     runs-on: ubuntu-latest
+    needs: [setup]
     steps:
       - uses: actions/checkout@v3
       - uses: dtolnay/rust-toolchain@stable
       - uses: Swatinem/rust-cache@v2.7.0
-      - run: sudo apt-get install -yq --no-install-recommends libudev-dev libasound2-dev libxcb-composite0-dev
-      - run: cargo test --workspace --doc
+      - run: cargo test --all-features --doc
